--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
             "Google\\": "src"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {}
 }
